# pls

./: Cargo.toml  README.md
src/: commands.rs  config.rs  db.rs  executor.rs  index.rs  main.rs  ollama.rs  planner.rs  retrieval.rs  safety.rs  types.rs  ui.rs
