[package]
name = "pls"
version = "0.1.0"
edition = "2021"
description = "A CLI assistant that speaks Unix"
license = "MIT"
authors = ["hansmrtn"]
repository = "https://github.com/hansmrtn/pls"

[dependencies]
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.11"
rusqlite = { version = "0.38", features = ["bundled"] }
dirs = "6.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
